// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`suomifiHandler muistuttajan pdf viesti suomi.fi 1`] = `
Object {
  "hetu": "ABC",
  "kustannuspaikka": undefined,
  "lahiosoite": "Osoite 1",
  "maa": "FI",
  "nimi": "Testi Teppo",
  "otsikko": "Ilmoitus suunnitelman nähtäville asettamisesta",
  "postinumero": "00100",
  "postitoimipaikka": "Helsinki",
  "sisalto": "Hei,

Olette saaneet kirjeen, jossa kerrotaan suunnitelman nähtäville asettamista sekä mahdollisuudesta tehdä suunnitelmasta muistutus. Kirje on tämän viestin liitteenä. Löydät kirjeestä linkin Valtion liikenneväylien suunnittelu -palveluun, missä pääsette tutustumaan suunnitelmaan tarkemmin.

Ystävällisin terveisin
Väylävirasto",
  "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
  "tiedosto": Object {
    "kuvaus": "T415 Ilmoitus kiinteistönomistajille nähtäville asettamisesta",
    "nimi": "T415 Ilmoitus kiinteistonomistajille nahtaville asettamisesta.pdf",
    "sisalto": Object {
      "data": Array [],
      "type": "Buffer",
    },
  },
  "ytunnus": undefined,
}
`;

exports[`suomifiHandler muistuttajan pdf viesti suomi.fi ruotsi 1`] = `
Object {
  "hetu": "ABC",
  "kustannuspaikka": undefined,
  "lahiosoite": "Svart katten's gatan 13 c 13, B.O.X 1010",
  "maa": "SE",
  "nimi": "Minerva Marttila",
  "otsikko": "Ilmoitus suunnitelman nähtäville asettamisesta",
  "postinumero": "SE-",
  "postitoimipaikka": "01230 STOCKHOLM, Ruotsii",
  "sisalto": "Hei,

Olette saaneet kirjeen, jossa kerrotaan suunnitelman nähtäville asettamista sekä mahdollisuudesta tehdä suunnitelmasta muistutus. Kirje on tämän viestin liitteenä. Löydät kirjeestä linkin Valtion liikenneväylien suunnittelu -palveluun, missä pääsette tutustumaan suunnitelmaan tarkemmin.

Ystävällisin terveisin
Väylävirasto",
  "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
  "tiedosto": Object {
    "kuvaus": "T415 Ilmoitus kiinteistönomistajille nähtäville asettamisesta",
    "nimi": "T415 Ilmoitus kiinteistonomistajille nahtaville asettamisesta.pdf",
    "sisalto": Object {
      "data": Array [],
      "type": "Buffer",
    },
  },
  "ytunnus": undefined,
}
`;

exports[`suomifiHandler muistuttajan sähköposti annettu 1`] = `
Array [
  Object {
    "subject": "Muistutus on vastaanotettu",
    "text": "Muistutus on vastaanotettu
Suunnitelman nimi: Projektin nimi
Suunnitelman asiatunnus: ely123

Elinvoimakeskus käsittelee muistutustasi asiatunnuksella. Mikäli haluat olla yhteydessä suunnitelmaan liittyen ilmoitathan asiatunnuksen viestissäsi.

Suunnitelman tietoihin pääset tästä linkistä: https://localhost:3000/suunnitelma/1/nahtavillaolo

Muistutus:
Muistutus 1

Muistutuksen mukana toimitettu seuraavannimiset liitteet:
test.txt
",
    "to": "test@test.fi",
  },
]
`;

exports[`suomifiHandler muistuttajan sähköposti annettu 2`] = `
Array [
  Object {
    "subject": "Muistutus on vastaanotettu",
    "text": "Muistutus on vastaanotettu
Suunnitelman nimi: Projektin nimi2
Suunnitelman asiatunnus: vayla123

Väylävirasto käsittelee muistutustasi asiatunnuksella. Mikäli haluat olla yhteydessä suunnitelmaan liittyen ilmoitathan asiatunnuksen viestissäsi.

Suunnitelman tietoihin pääset tästä linkistä: https://localhost:3000/suunnitelma/1/nahtavillaolo

Muistutus:
Muistutus 1

Muistutuksen mukana toimitettu seuraavannimiset liitteet:
test.txt
",
    "to": "test@test.fi",
  },
]
`;

exports[`suomifiHandler muistuttajan sähköposti annettu 3`] = `
Array [
  Object {
    "subject": "Muistutus on vastaanotettu",
    "text": "Muistutus on vastaanotettu
Suunnitelman nimi: Projektin nimi3
Suunnitelman asiatunnus: vayla123

Väylävirasto käsittelee muistutustasi asiatunnuksella. Mikäli haluat olla yhteydessä suunnitelmaan liittyen ilmoitathan asiatunnuksen viestissäsi.

Suunnitelman tietoihin pääset tästä linkistä: https://localhost:3000/suunnitelma/1/nahtavillaolo

Muistutus:
Muistutus 1


",
    "to": "test@test.fi",
  },
]
`;

exports[`suomifiHandler muistuttajan sähköposti annettu 4`] = `
Array [
  Object {
    "subject": "Muistutus on vastaanotettu / Anmärkningen har mottagits",
    "text": "Muistutus on vastaanotettu
Suunnitelman nimi: Projektin nimi4
Suunnitelman asiatunnus: vayla123

Väylävirasto käsittelee muistutustasi asiatunnuksella. Mikäli haluat olla yhteydessä suunnitelmaan liittyen ilmoitathan asiatunnuksen viestissäsi.

Suunnitelman tietoihin pääset tästä linkistä: https://localhost:3000/suunnitelma/1/nahtavillaolo

Muistutus:
Muistutus 1



Anmärkningen har mottagits
Planens namn: Projekts namn4
Planens ärendekod: vayla123

Trafikledsverket behandlar din anmärkning med en ärendekod. Om du vill kontakta oss i anslutning till planen, meddela ärendekoden i ditt meddelande.

Du kommer till planens uppgifter via denna länk: https://localhost:3000/sv/suunnitelma/1/nahtavillaolo

Anmärkning:
Muistutus 1


",
    "to": "test@test.fi",
  },
]
`;

exports[`suomifiHandler muistuttajan sähköposti annettu 5`] = `
Array [
  Object {
    "subject": "Muistutus on vastaanotettu / Anmärkningen har mottagits",
    "text": "Muistutus on vastaanotettu
Suunnitelman nimi: Projektin nimi5
Suunnitelman asiatunnus: ely123

ELY-keskus käsittelee muistutustasi asiatunnuksella. Mikäli haluat olla yhteydessä suunnitelmaan liittyen ilmoitathan asiatunnuksen viestissäsi.

Suunnitelman tietoihin pääset tästä linkistä: https://localhost:3000/suunnitelma/1/nahtavillaolo

Muistutus:
Muistutus 1

Muistutuksen mukana toimitettu seuraavannimiset liitteet:
test.txt

Anmärkningen har mottagits
Planens namn: Projekts namn5
Planens ärendekod: ely123

NTM-centralen behandlar din anmärkning med en ärendekod. Om du vill kontakta oss i anslutning till planen, meddela ärendekoden i ditt meddelande.

Du kommer till planens uppgifter via denna länk: https://localhost:3000/sv/suunnitelma/1/nahtavillaolo

Anmärkning:
Muistutus 1

Bilagor med följande namn som bifogats anmärkningen:
test.txt
",
    "to": "test@test.fi",
  },
]
`;

exports[`suomifiHandler muistuttajan viesti suomi.fi 1`] = `
Object {
  "hetu": "ABC",
  "otsikko": "Muistutus on vastaanotettu",
  "sisalto": "Muistutus on vastaanotettu
Suunnitelman nimi: Projektin nimi
Suunnitelman asiatunnus: ely123

Elinvoimakeskus käsittelee muistutustasi asiatunnuksella. Mikäli haluat olla yhteydessä suunnitelmaan liittyen ilmoitathan asiatunnuksen viestissäsi.

Suunnitelman tietoihin pääset tästä linkistä: https://localhost:3000/suunnitelma/1/nahtavillaolo

Muistutus:
Muistutus 1

Muistutuksen mukana toimitettu seuraavannimiset liitteet:
test.txt
",
}
`;

exports[`suomifiHandler muistuttajan viesti suomi.fi paperiposti 1`] = `
Array [
  Object {
    "subject": "Muistutus on vastaanotettu",
    "text": "Muistutus on vastaanotettu
Suunnitelman nimi: Projektin nimi
Suunnitelman asiatunnus: ely123

Elinvoimakeskus käsittelee muistutustasi asiatunnuksella. Mikäli haluat olla yhteydessä suunnitelmaan liittyen ilmoitathan asiatunnuksen viestissäsi.

Suunnitelman tietoihin pääset tästä linkistä: https://localhost:3000/suunnitelma/1/nahtavillaolo

Muistutus:
Muistutus 1

Muistutuksen mukana toimitettu seuraavannimiset liitteet:
test.txt
",
    "to": "test@test.fi",
  },
]
`;

exports[`suomifiHandler omistajan pdf viesti suomi.fi 1`] = `
Object {
  "hetu": "ABC",
  "kustannuspaikka": undefined,
  "lahiosoite": "Osoite 1",
  "maa": "FI",
  "nimi": "Testi Teppo",
  "otsikko": "Ilmoitus suunnitelman nähtäville asettamisesta",
  "postinumero": "00100",
  "postitoimipaikka": "Helsinki",
  "sisalto": "Hei,

Olette saaneet kirjeen, jossa kerrotaan suunnitelman nähtäville asettamista sekä mahdollisuudesta tehdä suunnitelmasta muistutus. Kirje on tämän viestin liitteenä. Löydät kirjeestä linkin Valtion liikenneväylien suunnittelu -palveluun, missä pääsette tutustumaan suunnitelmaan tarkemmin.

Ystävällisin terveisin
Väylävirasto",
  "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
  "tiedosto": Object {
    "kuvaus": "T415 Ilmoitus kiinteistönomistajille nähtäville asettamisesta",
    "nimi": "T415 Ilmoitus kiinteistonomistajille nahtaville asettamisesta.pdf",
    "sisalto": Object {
      "data": Array [],
      "type": "Buffer",
    },
  },
  "ytunnus": undefined,
}
`;

exports[`suomifiHandler omistajan pdf viesti suomi.fi hyväksymispäätös 1`] = `
Object {
  "hetu": "ABC",
  "kustannuspaikka": undefined,
  "lahiosoite": "Osoite 1",
  "maa": "FI",
  "nimi": "Testi Teppo",
  "otsikko": "Ilmoitus suunnitelman hyväksymispäätöksestä / Meddelande om beslut om godkännande av planen",
  "postinumero": "00100",
  "postitoimipaikka": "Helsinki",
  "sisalto": "Hei,

Olette saaneet kirjeen, jossa kerrotaan suunnitelmaa koskevasta hyväksymispäätöksestä. Kirje on tämän viestin liitteenä. Löydät kirjeestä linkin Valtion liikenneväylien suunnittelu -palveluun, missä pääsette tutustumaan tarkemmin päätökseen ja sen liitteenä oleviin suunnitelma-aineistoihin.

Ystävällisin terveisin
Pirkanmaan ELY-keskus

Hej,

Ni har fått ett brev med information om beslut om godkännande av planen. Brevet finns som bilaga till detta meddelande. I brevet hittar du en länk till tjänsten Planering av statens trafikleder, där ni kan bekanta er närmare med beslutet och det bifogade planeringsmaterialet.

Med vänlig hälsning
NTM-centralen i Birkaland
",
  "suunnittelustaVastaavaViranomainen": "PIRKANMAAN_ELY",
  "tiedosto": Object {
    "kuvaus": "T431_4 Ilmoitus hyväksymispäätöksestä kiinteistönomistajille ja muistuttajille",
    "nimi": "T431_4 Ilmoitus hyvaksymispaatoksesta kiinteistonomistajille ja muistuttajille.pdf",
    "sisalto": Object {
      "data": Array [],
      "type": "Buffer",
    },
  },
  "ytunnus": undefined,
}
`;

exports[`suomifiHandler omistajan pdf viesti suomi.fi nähtävilläolo 1`] = `
Object {
  "hetu": "ABC",
  "kustannuspaikka": undefined,
  "lahiosoite": "Osoite 1",
  "maa": "FI",
  "nimi": "Testi Teppo",
  "otsikko": "Ilmoitus suunnitelman nähtäville asettamisesta / Meddelande om framläggande av planen",
  "postinumero": "00100",
  "postitoimipaikka": "Helsinki",
  "sisalto": "Hei,

Olette saaneet kirjeen, jossa kerrotaan suunnitelman nähtäville asettamista sekä mahdollisuudesta tehdä suunnitelmasta muistutus. Kirje on tämän viestin liitteenä. Löydät kirjeestä linkin Valtion liikenneväylien suunnittelu -palveluun, missä pääsette tutustumaan suunnitelmaan tarkemmin.

Ystävällisin terveisin
Uudenmaan ELY-keskus

Hej,

Ni har fått ett brev med information om framläggandet av planen samt om möjligheten att göra en anmärkning på planen. Brevet finns som bilaga till detta meddelande. I brevet hittar du en länk till tjänsten Planering av statens trafikleder, där ni kan bekanta er närmare med planen.

Med vänlig hälsning
NTM-centralen i Nyland
",
  "suunnittelustaVastaavaViranomainen": "UUDENMAAN_ELY",
  "tiedosto": Object {
    "kuvaus": "T415 Ilmoitus kiinteistönomistajille nähtäville asettamisesta",
    "nimi": "T415 Ilmoitus kiinteistonomistajille nahtaville asettamisesta.pdf",
    "sisalto": Object {
      "data": Array [],
      "type": "Buffer",
    },
  },
  "ytunnus": undefined,
}
`;

exports[`suomifiHandler omistajan suomi-saame pdf viesti suomi.fi nähtävilläolo 1`] = `
Object {
  "hetu": "ABC",
  "kustannuspaikka": undefined,
  "lahiosoite": "Osoite 1",
  "maa": "FI",
  "nimi": "Testi Teppo",
  "otsikko": "Ilmoitus suunnitelman nähtäville asettamisesta",
  "postinumero": "00100",
  "postitoimipaikka": "Helsinki",
  "sisalto": "Hei,

Olette saaneet kirjeen, jossa kerrotaan suunnitelman nähtäville asettamista sekä mahdollisuudesta tehdä suunnitelmasta muistutus. Kirje on tämän viestin liitteenä. Löydät kirjeestä linkin Valtion liikenneväylien suunnittelu -palveluun, missä pääsette tutustumaan suunnitelmaan tarkemmin.

Ystävällisin terveisin
Uudenmaan ELY-keskus",
  "suunnittelustaVastaavaViranomainen": "UUDENMAAN_ELY",
  "tiedosto": Object {
    "kuvaus": "T415 Ilmoitus kiinteistönomistajille nähtäville asettamisesta",
    "nimi": "T415 Ilmoitus kiinteistonomistajille nahtaville asettamisesta.pdf",
    "sisalto": Object {
      "data": Array [],
      "type": "Buffer",
    },
  },
  "ytunnus": undefined,
}
`;
